--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "format": "prettier --write .",
+    "build": "tsc"
   },
   "keywords": [
     "anchor",
@@ -15,14 +17,20 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/LimeChain/gimlet-anchor-instruction-input-generator"},
+    "url": "https://github.com/LimeChain/gimlet-anchor-instruction-input-generator"
+  },
   "author": "LimeChain",
   "license": "MIT",
   "dependencies": {
     "fs": "^0.0.1-security"
   },
   "devDependencies": {
+    "typescript": "^5.9.2",
     "@types/node": "^24.2.1",
-    "typescript": "^5.9.2"
+    "@types/jest": "^30.0.0",
+    "jest": "^30.0.5",
+    "ts-jest": "^29.4.1",
+    "js-sha256": "^0.11.1",
+    "prettier": "^3.6.2"
   }
 }
