--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -4,9 +4,9 @@
 name: Publish npm package
 
 on:
-  workflow_dispatch:
-  release:
-    types: [published]
+  push:
+    branches:
+      - feat/package-publish-action
 jobs:
   build:
     runs-on: ubuntu-latest
