--- a/package.json
+++ b/package.json
@@ -2,12 +2,21 @@
   "name": "@limechain/gimlet-anchor-instruction-input-generator",
   "version": "0.0.1",
   "description": "Generate instruction JSON files dynamically from JS tests for Agave Ledger Tool",
-  "main": "index.ts",
-  "type": "module",
+  "main": "dist/cjs/index.js",        
+  "module": "dist/esm/index.js",     
+  "types": "dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
+    }
+  },
+  "files": ["dist"],
   "scripts": {
-    "test": "jest",
-    "format": "prettier --write .",
-    "build": "tsc"
+    "build:cjs": "tsc --project tsconfig.cjs.json",
+    "build:esm": "tsc --project tsconfig.esm.json",
+    "build": "npm run build:cjs && npm run build:esm",
+    "test": "jest"
   },
   "keywords": [
     "anchor",
@@ -30,7 +39,6 @@
     "@types/jest": "^30.0.0",
     "jest": "^30.0.5",
     "ts-jest": "^29.4.1",
-    "js-sha256": "^0.11.1",
     "prettier": "^3.6.2"
   }
 }
